# Ryngo

./: CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
assets/: wezterm.desktop
assets/shell-completion/: fish  zsh
assets/shell-integration/: ryngo-integration.sh
ci/: windows-installer.iss
config/src/: color.rs  config.rs  keyassignment.rs  lib.rs  lua.rs
env-bootstrap/src/: lib.rs  ringlog.rs
lua-api-crates/battery/src/: lib.rs
lua-api-crates/color-funcs/src/: lib.rs
lua-api-crates/filesystem/src/: lib.rs
lua-api-crates/logging/src/: lib.rs
lua-api-crates/mux/src/: window.rs
lua-api-crates/serde-funcs/src/: lib.rs
lua-api-crates/share-data/src/: lib.rs
lua-api-crates/spawn-funcs/src/: lib.rs
lua-api-crates/ssh-funcs/src/: lib.rs
lua-api-crates/termwiz-funcs/src/: lib.rs
lua-api-crates/time-funcs/src/: lib.rs
mux/: Cargo.toml
mux/src/: connui.rs  domain.rs  lib.rs
ryngo-agent/: Cargo.toml
ryngo-agent/src/: auto_approve.rs  commands.rs  detector.rs  lib.rs  status.rs
ryngo-ai/: Cargo.toml
ryngo-ai/src/: agent_prompt.rs  lib.rs  llm.rs  models.rs  stt.rs  tools.rs
wezterm/: Cargo.toml
wezterm-blob-leases/src/: simple_tempdir.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: commands.rs  main.rs  ryngo_state.rs  tabbar.rs  update.rs
wezterm-gui/src/overlay/: llm_chat.rs  mod.rs
wezterm-gui/src/termwindow/: keyevent.rs  mod.rs  (+2 more)
wezterm-mux-server/: Cargo.toml
wezterm-toast-notification/src/: dbus.rs  windows.rs
wezterm/src/: asciicast.rs  main.rs  screenshot.rs
(+8 files in other folders)
